code fixes
Signed-off-by: sunilsoni <sunilsoni@live.in>